erDiagram
  INSTRUMENTO_PUBLICO ||--o{ ENCABEZAMIENTO : tiene
  INSTRUMENTO_PUBLICO ||--|{ COMPARECENCIA : registra
  INSTRUMENTO_PUBLICO ||--|{ INTERVENCION : contiene
  INSTRUMENTO_PUBLICO }|--|| NOTARIO : "autorizado por"
  
  COMPARECENCIA }|--|| PERSONA_FISICA : "realizada por"
  COMPARECENCIA {
    string Rol "Otorgante, testigo, traductor, etc."
  }
  
  INTERVENCION ||--|| REPRESENTACION : "se_apoya_en"
  REPRESENTACION }|--|| PERSONA_FISICA : "Representante"
  REPRESENTACION }|--|{ PERSONA_FISICA : "Representado (físico)"
  REPRESENTACION }|--|| PERSONA_JURIDICA : "Representado (jurídico)"
  
  PERSONA_JURIDICA }|--|{ PERSONA_FISICA : "titular_real"
  
  INSTRUMENTO_PUBLICO ||--|{ JUICIO_CAPACIDAD : "incluye"
  JUICIO_CAPACIDAD {
    bool Capacidad_natural
    bool Legitimación
  }
  JUICIO_CAPACIDAD }|--|| PERSONA_FISICA : "sobre"
  JUICIO_CAPACIDAD }|--|| NOTARIO : "verificado_por"